# igvmacos

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
desktop/: GenomeCanvas.cpp  GenomeCanvas.h  MainWindow.cpp  MainWindow.h  RustBridge.h  SessionParsers.cpp  SessionParsers.h  SessionTypes.h  main.cpp
docs/: case-manifest.md  example.case.json  igv-desktop-feature-inventory.md  igv-parity-backlog.md  researcher-workflow-roadmap.md
src/: lib.rs
tests/: session_parsers_test.cpp
